# sw-minio-service

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  tox.ini
sw_minio_service/: __init__.py  ai_service.py  configs.py  engine.py  mapper.py
tests/: test_sw_minio_service.py
