[project]
name = "sw-minio-service"
version = "0.1.0"
description = "This is my Python project."
authors = [{ name = "Arda Can Aras", email = "ardaaras99@gmail.com" }]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

dependencies = [
    "minio>=7.2.15",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "langchain-community>=0.3.20",
    "pypdf2>=3.0.1",
    "unstructured[pdf]>=0.17.2",
    "sw-onto-generation",
    "agno>=1.6.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "pip-audit>=2.8.0",
    "ipykernel>=6.29.5",
    "ipython>=8.34.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "commitizen>=4.4.1",
    "pep8-naming>=0.14.1",
    "pre-commit>=4.2.0",
    "pyupgrade>=3.19.1",
    "ruff>=0.11.0",
    "tox-uv>=1.25.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.1.0"
version_provider = "uv"
version_files = [
    "pyproject.toml:version",
    "sw_minio_service/__init__.py:__version__",
]
major_version_zero = true
update_changelog_on_bump = true

[tool.uv.sources]
sw-onto-generation = { git = "https://github.com/ardaaras99/sw-onto-generation.git" }
